--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,13 @@ numpy = "^1.22.2"
 tensorflow = "^2.8.0"
 scikit-learn = "^1.0.2"
 PyWavelets = "^1.2.0"
+tqdm = "^4.63.0"
+tk = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
-blue = "^0.7.0"
 isort = "^5.10.1"
+black = "^22.1.0"
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
