--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,22 @@
 [tool.poetry]
-name = "iniciação científica"
+name = "predicao-epilepsia"
 version = "0.1.0"
 description = ""
-authors = ["luis705 <luisotaviolamorim@gmail.com>"]
+authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "3.8"
-pandas = "^1.4.0"
-networkx = "^2.6.3"
-numpy = "^1.22.2"
+pandas = "^1.4.2"
+networkx = "^2.8"
+numpy = "^1.22.3"
 tensorflow = "^2.8.0"
 scikit-learn = "^1.0.2"
 PyWavelets = "^1.2.0"
-tqdm = "^4.63.0"
-tk = "^0.1.0"
+tqdm = "^4.64.0"
 
 [tool.poetry.dev-dependencies]
+black = "^22.3.0"
 isort = "^5.10.1"
-black = "^22.1.0"
-
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
