Mudança em montaArqsJanelas
Agora este arquivo cria janelas para todos
os intervalos, não pulando vários buscando
criar um número balanceado de classes

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Diretórios indesejados
 Imagens relatório/*
 Referencias/*
+*/__pycache__/*
 
 # Extensões indesejadas
 *.pptx
@@ -11,6 +12,7 @@ Referencias/*
 *.zip
 *.txt
 *.gz
+
 
 # Virtualenvs
 */venv/*
